--- a/RockPaperScissors/Base.lproj/Main.storyboard
+++ b/RockPaperScissors/Base.lproj/Main.storyboard
@@ -53,8 +53,8 @@
                                     <action selector="choseRock:" destination="BV1-FR-VrT" eventType="touchUpInside" id="FLh-jB-SAE"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Streak:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ORC-UN-o8i">
-                                <rect key="frame" x="27" y="312" width="69" height="27"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ORC-UN-o8i">
+                                <rect key="frame" x="27" y="312" width="73" height="27"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="22"/>
                                 <color key="textColor" red="0.9410184011684346" green="1" blue="0.93810265766389023" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -86,7 +86,7 @@
                                     <constraint firstAttribute="width" secondItem="T8T-Yv-hex" secondAttribute="height" multiplier="1:1" id="cz1-df-EFa"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="rock" translatesAutoresizingMaskIntoConstraints="NO" id="6g4-Xq-3Cf" userLabel="playerImage">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rock" translatesAutoresizingMaskIntoConstraints="NO" id="6g4-Xq-3Cf" userLabel="playerImage">
                                 <rect key="frame" x="382" y="104" width="166" height="166"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="6g4-Xq-3Cf" secondAttribute="height" multiplier="1:1" id="VhA-Vt-Mmp"/>
@@ -97,6 +97,7 @@
                         <constraints>
                             <constraint firstItem="u0B-g3-pu3" firstAttribute="top" secondItem="8aa-yV-Osq" secondAttribute="bottom" id="3D4-Zh-qvz"/>
                             <constraint firstItem="6g4-Xq-3Cf" firstAttribute="top" secondItem="3se-qz-xqx" secondAttribute="topMargin" constant="104" id="5yn-AH-5cE"/>
+                            <constraint firstAttribute="trailing" secondItem="6g4-Xq-3Cf" secondAttribute="trailing" constant="119" id="7H6-8O-BpN"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Xmc-KA-CUI" secondAttribute="bottom" constant="34" id="HQV-Cu-dxS"/>
                             <constraint firstAttribute="bottomMargin" secondItem="T8T-Yv-hex" secondAttribute="bottom" constant="105" id="Iqq-aU-Sc3"/>
                             <constraint firstAttribute="bottomMargin" secondItem="xvY-ur-mL5" secondAttribute="bottom" constant="34" id="Oze-wd-eZo"/>
@@ -104,13 +105,12 @@
                             <constraint firstItem="Xmc-KA-CUI" firstAttribute="trailing" secondItem="uag-HR-NZO" secondAttribute="trailing" constant="-116" id="X3h-mS-4VX"/>
                             <constraint firstItem="ORC-UN-o8i" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" constant="27" id="XyM-dG-9xk"/>
                             <constraint firstItem="xvY-ur-mL5" firstAttribute="trailing" secondItem="Xmc-KA-CUI" secondAttribute="trailing" constant="-100" id="j5D-em-H4r"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="6g4-Xq-3Cf" secondAttribute="bottom" constant="105" id="jdL-0J-Kja"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="6g4-Xq-3Cf" secondAttribute="bottom" constant="105" id="kaT-b7-ivg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="u0B-g3-pu3" secondAttribute="trailing" id="kqD-Ug-vlf"/>
                             <constraint firstAttribute="bottomMargin" secondItem="ORC-UN-o8i" secondAttribute="bottom" constant="36" id="kuG-BG-Yfo"/>
                             <constraint firstItem="T8T-Yv-hex" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leadingMargin" constant="24" id="l54-cN-jpV"/>
                             <constraint firstItem="u0B-g3-pu3" firstAttribute="top" secondItem="3se-qz-xqx" secondAttribute="topMargin" constant="20" id="o8J-Io-wqr"/>
                             <constraint firstAttribute="trailing" secondItem="uag-HR-NZO" secondAttribute="trailing" constant="20" id="wQw-5J-VKk"/>
-                            <constraint firstAttribute="trailing" secondItem="6g4-Xq-3Cf" secondAttribute="trailing" constant="78" id="xnf-I5-oVj"/>
                             <constraint firstItem="u0B-g3-pu3" firstAttribute="leading" secondItem="xvY-ur-mL5" secondAttribute="leading" id="yWG-1x-Rtj"/>
                             <constraint firstAttribute="bottomMargin" secondItem="uag-HR-NZO" secondAttribute="bottom" constant="34" id="zso-GG-9gY"/>
                         </constraints>
@@ -118,6 +118,7 @@
                     <connections>
                         <outlet property="computerImage" destination="T8T-Yv-hex" id="WnZ-38-1Ih"/>
                         <outlet property="labelPlayerChoice" destination="u0B-g3-pu3" id="XGE-Fs-jRe"/>
+                        <outlet property="labelResult" destination="ORC-UN-o8i" id="FBB-D7-KqV"/>
                         <outlet property="playerImage" destination="6g4-Xq-3Cf" id="yfi-Q1-QHK"/>
                     </connections>
                 </viewController>
